--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@google-cloud/storage": "^7.17.1",
+    "@google-cloud/text-to-speech": "^6.3.0",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -29,9 +30,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
+    "ffmpeg-static": "^5.2.0",
     "framer-motion": "^12.23.22",
     "googleapis": "^161.0.0",
     "lucide-react": "^0.544.0",
@@ -46,8 +50,11 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "reactflow": "^11.11.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "zod": "^4.1.11"
   },
