Fix Firebase 404 errors and development server issues
- Fixed Firebase hosting configuration with proper rewrites
- Created Firebase-specific Next.js config for static export
- Added configuration management scripts (switch-config.js)
- Fixed development server configuration conflicts
- Created comprehensive documentation for Firebase deployment
- Added build scripts for both development and Firebase modes
- Resolved middleware conflicts with static export
- All studio tools now working with Audio Overview features
- Added Firebase 404 fix guides and quick reference documentation

--- a/firebase.json
+++ b/firebase.json
@@ -8,24 +8,65 @@
     ],
     "rewrites": [
       {
+        "source": "/en/studio",
+        "destination": "/en/studio/index.html"
+      },
+      {
+        "source": "/en/studio/**",
+        "destination": "/en/studio/index.html"
+      },
+      {
+        "source": "/en/dashboard",
+        "destination": "/en/dashboard/index.html"
+      },
+      {
+        "source": "/en/dashboard/**",
+        "destination": "/en/dashboard/index.html"
+      },
+      {
+        "source": "/en/workspace/**",
+        "destination": "/en/workspace/index.html"
+      },
+      {
+        "source": "/en/document-comparison",
+        "destination": "/en/document-comparison/index.html"
+      },
+      {
+        "source": "/en/document-comparison/**",
+        "destination": "/en/document-comparison/index.html"
+      },
+      {
+        "source": "/en",
+        "destination": "/en/index.html"
+      },
+      {
+        "source": "/",
+        "destination": "/en/index.html"
+      },
+      {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/404.html"
       }
     ],
     "headers": [
       {
-        "source": "**/*.@(js|css)",
+        "source": "**/*.@(js|css|png|jpg|jpeg|gif|ico|svg)",
         "headers": [
           {
             "key": "Cache-Control",
             "value": "max-age=31536000"
           }
         ]
+      },
+      {
+        "source": "**/*.html",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=0"
+          }
+        ]
       }
     ]
-  },
-  "functions": {
-    "source": "functions",
-    "runtime": "nodejs18"
   }
 }
