--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint",
     "seed": "tsx prisma/seed.ts",
     "build:desktop": "next build --turbopack",
+    "config:dev": "node switch-config.js development",
+    "config:firebase": "node switch-config.js firebase",
+    "build:firebase": "npm run config:firebase && npm run build",
+    "deploy:firebase": "npm run config:firebase && npm run build && firebase deploy --only hosting",
     "electron": "electron .",
     "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "npm run build:desktop && electron-builder",
