--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3002",
-    "build": "next build --turbopack",
+    "dev": "next dev --port 3005",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "seed": "tsx prisma/seed.ts",
-    "build:desktop": "next build --turbopack",
+    "build:desktop": "next build",
     "config:dev": "node switch-config.js development",
     "config:firebase": "node switch-config.js firebase",
     "build:firebase": "node build-firebase-clean.js",
@@ -70,6 +70,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "jest": "^30.2.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "^5"
