--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Syntara Tenders AI",
-  "short_name": "Syntara",
+  "name": "Handson Ai",
+  "short_name": "Handson Ai",
   "description": "Professional tender management application with AI intelligence",
   "start_url": "/",
   "display": "standalone",
