--- a/env.example
+++ b/env.example
@@ -1,95 +1,1 @@
-# Environment Configuration Template
-# Copy this file to .env.local and fill in your values
-
-# ===========================================
-# APPLICATION CONFIGURATION
-# ===========================================
-NODE_ENV=production
-NEXT_PUBLIC_APP_URL=https://your-domain.com
-NEXT_PUBLIC_API_URL=https://your-domain.com/api
-
-# ===========================================
-# DATABASE CONFIGURATION
-# ===========================================
-# PostgreSQL (Production)
-DATABASE_URL="postgresql://username:password@host:port/database"
-
-# SQLite (Development only)
-# DATABASE_URL="file:./dev.db"
-
-# ===========================================
-# GOOGLE SERVICES CONFIGURATION
-# ===========================================
-# Google Gemini AI
-GOOGLE_GEMINI_API_KEY="your-gemini-api-key"
-
-# Google Cloud Storage
-GOOGLE_CLOUD_PROJECT_ID="your-project-id"
-GOOGLE_CLOUD_STORAGE_BUCKET="your-bucket-name"
-GOOGLE_CLOUD_SERVICE_ACCOUNT_KEY="path-to-service-account.json"
-
-# Google Drive API
-GOOGLE_DRIVE_CLIENT_ID="your-client-id"
-GOOGLE_DRIVE_CLIENT_SECRET="your-client-secret"
-GOOGLE_DRIVE_REDIRECT_URI="https://your-domain.com/api/auth/google/callback"
-
-# ===========================================
-# AUTHENTICATION CONFIGURATION
-# ===========================================
-JWT_SECRET="your-super-secret-jwt-key-minimum-32-characters-long"
-NEXTAUTH_SECRET="your-nextauth-secret-key-minimum-32-characters"
-NEXTAUTH_URL="https://your-domain.com"
-
-# ===========================================
-# EXTERNAL INTEGRATIONS (OPTIONAL)
-# ===========================================
-# Slack Integration
-SLACK_CLIENT_ID="your-slack-client-id"
-SLACK_CLIENT_SECRET="your-slack-client-secret"
-SLACK_REDIRECT_URI="https://your-domain.com/api/integrations/slack/callback"
-
-# Jira Integration
-JIRA_CLIENT_ID="your-jira-client-id"
-JIRA_CLIENT_SECRET="your-jira-client-secret"
-JIRA_REDIRECT_URI="https://your-domain.com/api/integrations/jira/callback"
-
-# Microsoft Graph (OneDrive/Outlook)
-MICROSOFT_CLIENT_ID="your-microsoft-client-id"
-MICROSOFT_CLIENT_SECRET="your-microsoft-client-secret"
-MICROSOFT_REDIRECT_URI="https://your-domain.com/api/integrations/microsoft/callback"
-
-# ===========================================
-# EMAIL CONFIGURATION (OPTIONAL)
-# ===========================================
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT="587"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-app-password"
-
-# ===========================================
-# MONITORING & ANALYTICS (OPTIONAL)
-# ===========================================
-# Sentry Error Tracking
-SENTRY_DSN="your-sentry-dsn"
-
-# Google Analytics
-NEXT_PUBLIC_GA_ID="G-XXXXXXXXXX"
-
-# ===========================================
-# FILE UPLOAD CONFIGURATION
-# ===========================================
-MAX_FILE_SIZE="10485760" # 10MB in bytes
-ALLOWED_FILE_TYPES="pdf,doc,docx,xls,xlsx,txt,jpg,jpeg,png"
-
-# ===========================================
-# CACHE CONFIGURATION
-# ===========================================
-REDIS_URL="redis://localhost:6379"
-CACHE_TTL="3600" # 1 hour in seconds
-
-# ===========================================
-# SECURITY CONFIGURATION
-# ===========================================
-CORS_ORIGIN="https://your-domain.com"
-RATE_LIMIT_MAX="100" # requests per window
-RATE_LIMIT_WINDOW="900000" # 15 minutes in milliseconds
+GOOGLE_API_KEY=
