--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syntara-tenders-ai",
+  "name": "handson-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,6 @@
     "build:desktop": "next build",
     "config:dev": "node switch-config.js development",
     "config:firebase": "node switch-config.js firebase",
-    "build:firebase": "node build-firebase-clean.js",
-    "deploy:firebase": "node build-firebase-clean.js && firebase deploy --only hosting",
     "electron": "electron .",
     "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "npm run build:desktop && electron-builder",
@@ -29,10 +27,12 @@
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-progress": "^1.1.7",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^7.3.3",
+    "algoliasearch": "^5.42.0",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
     "chart.js": "^4.5.0",
@@ -40,6 +40,8 @@
     "date-fns": "^4.1.0",
     "diff": "^8.0.2",
     "ffmpeg-static": "^5.2.0",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.6.0",
     "framer-motion": "^12.23.22",
     "googleapis": "^161.0.0",
     "lucide-react": "^0.544.0",
@@ -52,18 +54,24 @@
     "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-diff-view": "^3.3.2",
     "react-dom": "19.1.0",
+    "react-resizable-panels": "^3.0.6",
     "reactflow": "^11.11.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -71,7 +79,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
     "typescript": "^5"
   }
