--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3005",
+  "check:routes": "node scripts/check-routes.js",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -24,10 +25,13 @@
     "@google-cloud/storage": "^7.17.1",
     "@google-cloud/text-to-speech": "^6.3.0",
     "@google/generative-ai": "^0.24.1",
+    "@heroicons/react": "^2.2.0",
+    "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.7",
+    "@tailwindcss/typography": "^0.5.19",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "@types/bcryptjs": "^2.4.6",
@@ -42,27 +46,29 @@
     "ffmpeg-static": "^5.2.0",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.6.0",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "googleapis": "^161.0.0",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.11.0",
-    "next": "15.5.4",
+    "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "openai": "^6.1.0",
     "prisma": "^6.16.3",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-diff-view": "^3.3.2",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.6",
     "reactflow": "^11.11.4",
+    "recharts": "^3.3.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "uploadthing": "^7.7.4",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
@@ -74,8 +80,8 @@
     "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "jest": "^30.2.0",
